@@ -2,7 +2,7 @@
 # Kernel/Modules/AgentTicketCompose.pm - to compose and send a message
 # Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: AgentTicketCompose.pm,v 1.91.2.1 2010-04-01 18:11:54 martin Exp $
+# $Id: AgentTicketCompose.pm,v 1.91.2.2 2010-05-28 17:00:39 dz Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -24,7 +24,7 @@ use Kernel::System::TemplateGenerator;
 use Mail::Address;
 
 use vars qw($VERSION);
-$VERSION = qw($Revision: 1.91.2.1 $) [1];
+$VERSION = qw($Revision: 1.91.2.2 $) [1];
 
 sub new {
     my ( $Type, %Param ) = @_;
@@ -839,6 +839,11 @@ sub Run {
         $Data{Salutation}  = $Response{Salutation};
         $Data{Signature}   = $Response{Signature};
         $Data{StdResponse} = $Response{StdResponse};
+
+        # filter links in response
+        $Data{StdResponse} = $Self->{LayoutObject}->HTMLLinkQuote(
+            String => $Data{StdResponse},
+        );
 
         %Data = $TemplateGenerator->Attributes(
             TicketID   => $Self->{TicketID},
